tests/test_input_files/good/test_good_array_32.punkt
main {
	const A = [1, 2].
	println A[-1].
}
