tests/test_input_files/bad/test_bad_array_8.punkt
main {
	const A = [1, 2,]
}
